--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "typescript": "^4.2.3"
   },
   "devDependencies": {
-    "@types/next-auth": "^3.7.2",
+    "@types/next-auth": "3.7.1",
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3"
   }
